# lda

./: CMakeLists.txt  features_si.c  features_si.h  features_ui.c  features_ui.h  fixed_si16.c  fixed_si16.h  fixed_ui16.c  fixed_ui16.h  lda.c  lda.h  main.c  mat_si16.c  mat_si16.h  mat_ui16.c  mat_ui16.h  matrix_fl.c  matrix_fl.h  proj_cte.h  project.h
